// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`index with path should prefix actions 1`] = `
Object {
  "payload": Object {
    "id": 2,
    "some": "information 2",
  },
  "type": "ADD_todos",
}
`;

exports[`index with path should prefix reducer 1`] = `
Object {
  "datas": Object {
    "1": Object {
      "id": 1,
      "some": "information 1",
    },
    "2": Object {
      "id": 2,
      "some": "information 2",
    },
  },
  "keys": Array [
    1,
    2,
  ],
  "nb": 2,
}
`;

exports[`index with path should prefix selectors 1`] = `
Object {
  "1": Object {
    "id": 1,
    "some": "information 1",
  },
  "2": Object {
    "id": 2,
    "some": "information 2",
  },
  "20": Object {
    "id": 20,
    "some": "information 20",
  },
}
`;

exports[`index without path should prefix actions 1`] = `
Object {
  "payload": Object {
    "id": 2,
    "some": "information 2",
  },
  "type": "ADD_todos",
}
`;

exports[`index without path should prefix reducer 1`] = `
Object {
  "datas": Object {
    "1": Object {
      "id": 1,
      "some": "information 1",
    },
    "2": Object {
      "id": 2,
      "some": "information 2",
    },
  },
  "keys": Array [
    1,
    2,
  ],
  "nb": 2,
}
`;

exports[`index without path should prefix selectors 1`] = `
Object {
  "1": Object {
    "id": 1,
    "some": "information 1",
  },
  "2": Object {
    "id": 2,
    "some": "information 2",
  },
  "20": Object {
    "id": 20,
    "some": "information 20",
  },
}
`;
